# goit-ds-hw-01

./: Dockerfile  README.md  pyproject.toml
